Add integration test